...
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="24dp"
                style="?attr/textInputOutlinedStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/albumNameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_album_field"
                    android:textColor="@color/white"
                    android:maxLength="100"/>
            </com.google.android.material.textfield.TextInputLayout>
...
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="24dp"
                style="?attr/textInputOutlinedStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/albumCoverInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/url_field"
                    android:textColor="@color/white"
                    android:inputType="textUri"
                    android:autofillHints="webAddress" />
...
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="24dp"
                style="?attr/textInputOutlinedStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/albumReleaseDateInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/release_date_album_field"
                    android:textColor="@color/white"
                    android:inputType="date"/>
            </com.google.android.material.textfield.TextInputLayout>
...
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="24dp"
                style="?attr/textInputOutlinedStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/albumDescriptionInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description_album_field"
                    android:textColor="@color/white"
                    android:maxLength="500"/>
            </com.google.android.material.textfield.TextInputLayout>
...
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="24dp"
                style="?attr/textInputOutlinedStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/albumGenreInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/genre_album_field"
                    android:textColor="@color/white"
                    android:maxLength="55"/>
            </com.google.android.material.textfield.TextInputLayout>
...
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="24dp"
                style="?attr/textInputOutlinedStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/albumRecordLabelInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/recordlabel_album_field"
                    android:textColor="@color/white"
                    android:maxLength="100"/>
            </com.google.android.material.textfield.TextInputLayout>
...

                <Space
                    android:layout_width="16dp"
                    android:layout_height="wrap_content" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/saveButton"
                    style="@style/ButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_weight="1"
                    android:text="@string/save_album_button"
...
