...
                android:text="@string/total_albums"
                android:textAllCaps="true"
                android:textSize="14sp" />

            <!-- Search field -->
            <EditText
                android:id="@+id/searchAlbumEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_below="@id/totalAlbumsTextView"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="16dp"
...
                android:textColorHint="@color/white"
                android:drawableStart="@drawable/ic_search_small"
                android:drawablePadding="3dp"/>

            <!-- Add Album Button -->
            <Button
                android:id="@+id/addAlbumButton"
                android:layout_width="152dp"
                android:layout_height="26dp"
                android:layout_below="@id/searchAlbumEditText"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/black_button_background"
...
