...
                android:text="@string/total_collectors"
                android:textAllCaps="true"
                android:textSize="14sp" />

            <!-- Campo de búsqueda para coleccionistas -->
            <EditText
                android:id="@+id/searchCollectorEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_below="@id/totalCollectorsTextView"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="16dp"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />

            <!-- Lista de coleccionistas -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/collectorsRv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/progressBar"
                android:layout_below="@id/addCollectorButton"
                tools:listitem="@layout/collector_item" />

...
